Move tooltip header out of content div and fix up spacing around sections.

--- a/src/app/dim-ui/PressTip.m.scss
+++ b/src/app/dim-ui/PressTip.m.scss
@@ -3,7 +3,7 @@
 $arrow-size: 10px; // ensure this stays in sync with 'popperArrowSize' in 'usePopper.ts'
 $border-color: #5d5970;
 $horizontal-padding: 8px;
-$half-arrow-size: $arrow-size / 2;
+$half-arrow-size: $arrow-size * 0.5;
 
 .arrow {
   width: $arrow-size;
@@ -34,10 +34,7 @@ $half-arrow-size: $arrow-size / 2;
 }
 
 .content {
-  width: fit-content;
-  padding: 8px $horizontal-padding;
-  border: 1px solid $border-color;
-  border-top: 5px solid var(--ribbon-color);
+  padding: 6px $horizontal-padding;
 }
 
 .tooltip {
@@ -54,6 +51,8 @@ $half-arrow-size: $arrow-size / 2;
   user-select: none;
 
   --ribbon-color: #8e8e9e;
+  border: 1px solid $border-color;
+  border-top: 5px solid var(--ribbon-color);
 
   &.wideTooltip {
     max-width: 100vw;
@@ -62,7 +61,6 @@ $half-arrow-size: $arrow-size / 2;
   .header {
     background-color: #070709;
     padding: 6px $horizontal-padding;
-    margin: -8px #{-$horizontal-padding} 6px #{-$horizontal-padding};
 
     h2 {
       @include destiny-header;
@@ -115,18 +113,17 @@ $half-arrow-size: $arrow-size / 2;
   &.minimalTooltip {
     border-radius: 3px;
     --ribbon-color: #{$border-color};
+    border-top: 1px solid $border-color;
 
     .content {
       padding: 3px 6px;
-      border-top: 1px solid $border-color;
-      border-radius: 3px;
     }
   }
 
   .section:not(:empty) {
-    margin: 6px #{-$horizontal-padding} -8px #{-$horizontal-padding};
+    margin: 6px #{-$horizontal-padding} -6px #{-$horizontal-padding};
     padding: 4px $horizontal-padding 6px $horizontal-padding;
-    border-top: 1px solid rgba($border-color, 0.4);
+    border-top: 1px solid rgba($border-color, 0.5);
 
     > :first-child {
       margin-top: 0;
@@ -134,6 +131,11 @@ $half-arrow-size: $arrow-size / 2;
 
     > :last-child {
       margin-bottom: 0;
+    }
+
+    &:first-child {
+      margin-top: -6px;
+      border-top: none;
     }
   }
 }
